<resources>
    <string name="app_name">MyAppMVP</string>
    <string name="text_button_one">Text Button One</string>
    <string name="text_button_two">Text Button Two</string>
    <string name="text_button_three">Text Button Three</string>

    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>

    <string name="demo_text_item_user">Text</string>
    <string name="main_activity_text">Activity</string>
    <string name="btn_convert_image">Convert image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_img">Add img</string>
    <string name="btn_convert_in_png">Convert in .png</string>
    <string name="btn_cancel">Cancel</string>
</resources>