<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTextOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_one" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1" />

    <TextView
        android:id="@+id/tvTextTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_two" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2" />

    <TextView
        android:id="@+id/tvTextThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_three" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3" />

</androidx.appcompat.widget.LinearLayoutCompat>